--- a/docs/com-2/intro_files/styles.css
+++ b/docs/com-2/intro_files/styles.css
@@ -242,7 +242,7 @@
     margin-bottom: 100px !important;
   }
 
-  pre {
+  div.code {
     background: rgb(240, 240, 240);
   }
 
@@ -359,12 +359,7 @@ li {
   margin: 0 0 0.5em 0;
 }
 
-div.code, div.output {
-  margin: 0;
-  padding: 0;
-}
-
-pre {
+div.code {
   padding: 5px 10px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -372,6 +367,10 @@ pre {
 
   background: rgb(240, 240, 240);
   border: 1px solid rgb(224, 224, 224);
+}
+pre {
+  margin: 0;
+  padding: 0;
 
   font-family: 'Droid Sans Mono', 'Courier New', monospace;
   font-size: 18px;
@@ -392,10 +391,6 @@ code {
   font-family: 'Droid Sans Mono', 'Courier New', monospace;
 
   color: black;
-}
-
-pre code {
-  font-size: 100%;
 }
 
 article > .image,
@@ -438,7 +433,7 @@ p.link {
 }
 
 /* Code */
-pre {
+div.code {
   outline: 0px solid transparent;
 }
 div.playground {
