--- a/docs/com-2/dp_files/styles.css
+++ b/docs/com-2/dp_files/styles.css
@@ -19,7 +19,15 @@
     background: -o-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
     background: -moz-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
     background: -webkit-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(240, 240, 240)), to(rgb(190, 190, 190)));
+    background: -webkit-gradient(
+      radial,
+      50% 50%,
+      0,
+      50% 50%,
+      500,
+      from(rgb(240, 240, 240)),
+      to(rgb(190, 190, 190))
+    );
 
     -webkit-font-smoothing: antialiased;
   }
@@ -64,12 +72,12 @@
 
     background-color: white;
 
-    border: 1px solid rgba(0, 0, 0, .3);
+    border: 1px solid rgba(0, 0, 0, 0.3);
 
-    transition: transform .3s ease-out;
-    -o-transition: -o-transform .3s ease-out;
-    -moz-transition: -moz-transform .3s ease-out;
-    -webkit-transition: -webkit-transform .3s ease-out;
+    transition: transform 0.3s ease-out;
+    -o-transition: -o-transform 0.3s ease-out;
+    -moz-transition: -moz-transform 0.3s ease-out;
+    -webkit-transition: -webkit-transform 0.3s ease-out;
   }
   .slides.layout-widescreen > article {
     margin-left: -550px;
@@ -234,14 +242,15 @@
     margin-bottom: 100px !important;
   }
 
-  div.code {
+  pre {
     background: rgb(240, 240, 240);
   }
 
   /* Add explicit links */
-  a:link:after, a:visited:after {
-   content: " (" attr(href) ") ";
-   font-size: 50%;
+  a:link:after,
+  a:visited:after {
+    content: ' (' attr(href) ') ';
+    font-size: 50%;
   }
 
   #help {
@@ -256,7 +265,7 @@
   font-family: 'Open Sans', Arial, sans-serif;
 
   color: black;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, .1);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 
   font-size: 26px;
   line-height: 36px;
@@ -273,7 +282,7 @@ a {
   text-decoration: none;
 }
 a:visited {
-  color: rgba(0, 102, 204, .75);
+  color: rgba(0, 102, 204, 0.75);
 }
 a:hover {
   color: black;
@@ -347,10 +356,15 @@ ul {
 }
 li {
   padding: 0;
-  margin: 0 0 .5em 0;
+  margin: 0 0 0.5em 0;
 }
 
-div.code {
+div.code, div.output {
+  margin: 0;
+  padding: 0;
+}
+
+pre {
   padding: 5px 10px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -358,10 +372,6 @@ div.code {
 
   background: rgb(240, 240, 240);
   border: 1px solid rgb(224, 224, 224);
-}
-pre {
-  margin: 0;
-  padding: 0;
 
   font-family: 'Droid Sans Mono', 'Courier New', monospace;
   font-size: 18px;
@@ -382,6 +392,10 @@ code {
   font-family: 'Droid Sans Mono', 'Courier New', monospace;
 
   color: black;
+}
+
+pre code {
+  font-size: 100%;
 }
 
 article > .image,
@@ -424,7 +438,7 @@ p.link {
 }
 
 /* Code */
-div.code {
+pre {
   outline: 0px solid transparent;
 }
 div.playground {
@@ -444,7 +458,6 @@ div.output {
   -o-border-radius: 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
-
 }
 div.output pre {
   margin: 0;
@@ -455,14 +468,17 @@ div.output pre {
   height: 100%;
   overflow: auto;
 }
-div.output .stdout, div.output pre {
+div.output .stdout,
+div.output pre {
   color: #e6e6e6;
 }
-div.output .stderr, div.output .error {
+div.output .stderr,
+div.output .error {
   color: rgb(255, 200, 200);
 }
-div.output .system, div.output .exit {
-  color: rgb(255, 230, 120)
+div.output .system,
+div.output .exit {
+  color: rgb(255, 230, 120);
 }
 .buttons {
   position: relative;
